[project]
name = "questionnaires"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "selenium>=4.28.1",
    "requests>=2.33.1",
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "pymysql>=1.1.1",
    "pandas>=2.3.0",
    "loguru>=0.7.3",
    "ratelimit>=2.2.1",
    "pydantic>=2.13.0",
    "inquirer>=3.4.1",
    "openpyxl>=3.1.5",
    "rich>=14.2.0",
    "pymupdf>=1.26.7",
    "tenacity>=9.1.2",
    "typer>=0.21.1",
    "google>=3.0.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "icecream>=2.1.8",
    "lefthook>=2.1.4",
    "ruff>=0.12.8",
]

[tool.ruff.lint]
select = ["UP", "FURB"]

[tool.ruff.lint.pydocstyle]
convention = "google"
